src/test/compile-fail/occurs-check.rs
// error-pattern: Type inference failed because I could not find
fn main() { let f; f = @f; }
